# async_client_server

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  empty_build_dirs.sh  how_to.txt  notes.txt  run_several_clients.sh  setup_script_to_source
asio_utils/: CMakeLists.txt  ErrorNotifyFunctor.h  Message.cpp  Message.h  MessagePostFunctor.h  MessagePoster.h  SocketConnector.h  SocketMessageHandler.cpp  SocketMessageHandler.h  TCPConnection.cpp  TCPConnection.h
client/: CMakeLists.txt  Client.cpp  Client.h  ClientTCPConnection.h  main.cpp
server/: CMakeLists.txt  DelayedMessageMirrorerFunctor.cpp  DelayedMessageMirrorerFunctor.h  Message.cpp  Message.h  MessageProcessFunctor.h  Server.cpp  Server.h  SocketMessageEnqueuer.cpp  SocketMessageEnqueuer.h  SocketMessageHandler.cpp  SocketMessageHandler.h  TCPConnection.cpp  TCPConnection.h  TCPConnectionExptal.cpp  TCPConnectionExptal.h  TaggedMessage.cpp  TaggedMessage.h  main.cpp
utils/: CMakeLists.txt  Logger.h  Message.cpp  Message.h  PrintLogger.cpp  PrintLogger.h  SocketMessageEnqueuer.cpp  SocketMessageEnqueuer.h  ThreadSafeDeque.h  byte_conversion_functions.cpp  byte_conversion_functions.h
web_client/: CMakeLists.txt  Client.cpp  Client.h  ClientTCPConnection.h  main.cpp
web_server/: CMakeLists.txt  Message.cpp  Message.h  Server.cpp  Server.h  TCPConnection.cpp  TCPConnection.h  main.cpp
